updated docs for Telegram integration

--- a/lambda/.env.sample
+++ b/lambda/.env.sample
@@ -3,3 +3,6 @@
 CLIENT_ID="xxx"
 CLIENT_SECRET="yyyy"
 SILENCE_EMPTY_LAMBDA_WARNING=tue
+# add these to activate the Netlify notifications via Telegram
+API_TOKEN="..."
+CHAT_ID="..."
