--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "font-awesome": "^4.7.0",
     "highlight.js": "9.15.6",
+    "js-cookie": "^2.2.1",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.1.6",
