fix multi-window, CSP only for editor + redirect

--- a/netlify.toml
+++ b/netlify.toml
@@ -9,8 +9,13 @@
 	public,
 	max-age=86400,
 	must-revalidate'''
+[[redirects]]
+  from = "/index.html"
+  to = "/"
+  status = 301
+  force = false
 [[headers]]
-  for = "/*"
+  for = "/"
   [headers.values]
 	content-security-policy = "base-uri 'self'; object-src 'none'; script-src 'self'; style-src 'unsafe-inline' 'self' https://fonts.googleapis.com/; connect-src 'self' https://api.github.com/; img-src 'self' https: data:; media-src 'none'; child-src 'none'; frame-src https://player.vimeo.com/ https://www.youtube.com/"
 [[headers]]
