--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "font-awesome": "^4.7.0",
     "highlight.js": "9.15.6",
     "js-cookie": "^2.2.1",
+    "three-way-merge": "^0.1.0",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-router": "^3.1.6",
