--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue-axios": "^2.1.5",
     "vue-router": "^3.1.6",
     "vuex": "^3.4.0",
-    "vuex-persistedstate": "^3.0.1"
+    "vuex-persistedstate": "^3.0.1",
+    "xss": "^1.0.7"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^5.1.1",
