toggle three different kinds of preview: new version, HTML diff, text diff closes #7

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@asciidoctor/core": "^2.2.0",
     "asciidoctor-kroki": "^0.8.2",
     "axios": "^0.19.2",
+    "diff": "^4.0.2",
     "font-awesome": "^4.7.0",
     "highlight.js": "9.15.6",
+    "htmldiff-js": "^1.0.5",
     "js-cookie": "^2.2.1",
     "three-way-merge": "^0.1.0",
     "vue": "^2.6.11",
