moving to vue-cli to use test harness

--- a/.editorconfig
+++ b/.editorconfig
@@ -3,3 +3,6 @@ root = true
 [{*.adoc, *.js, *.vue}]
 insert_final_newline = true
 trim_trailing_whitespace = true
+indent_size = 2
+tab_width = 2
+indent_style = space
