--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "vue-webpack-4",
-  "version": "1.1.0",
-  "description": "AsciiDoc Scratch Pad",
-  "main": "index.js",
+  "name": "asciidoc-editor",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --progress --config build/webpack.config.dev.js",
-    "prod": "webpack --config build/webpack.config.prod.js",
-    "serve": "http-server dist -p 5000 -a 127.0.0.1"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
+    "test:e2e": "vue-cli-service test:e2e",
+    "lint": "vue-cli-service lint",
+    "http": "http-server dist -p 5000 -a 127.0.0.1"
   },
   "dependencies": {
     "@asciidoctor/core": "^2.2.0",
     "asciidoctor-kroki": "^0.8.2",
     "axios": "^0.19.2",
+    "brace": "^0.11.1",
+    "core-js": "^3.6.5",
     "diff": "^4.0.2",
     "font-awesome": "^4.7.0",
     "highlight.js": "10.1.0",
@@ -20,17 +24,30 @@
     "three-way-merge": "^0.1.0",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
-    "vue-router": "^3.1.6",
+    "vue-router": "^3.2.0",
+    "vue2-ace-editor": "0.0.15",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^3.0.1",
     "xss": "^1.0.7"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^6.0.2",
-    "css-loader": "^3.4.2",
+    "@vue/cli-plugin-babel": "~4.4.0",
+    "@vue/cli-plugin-e2e-nightwatch": "~4.4.0",
+    "@vue/cli-plugin-eslint": "~4.4.0",
+    "@vue/cli-plugin-router": "~4.4.0",
+    "@vue/cli-plugin-unit-jest": "~4.4.0",
+    "@vue/cli-plugin-vuex": "~4.4.0",
+    "@vue/cli-service": "~4.4.0",
+    "@vue/eslint-config-airbnb": "^5.0.2",
+    "@vue/test-utils": "^1.0.3",
+    "babel-eslint": "^10.1.0",
+    "chromedriver": "83",
     "cssnano": "^4.1.10",
     "dotenv": "^8.2.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
     "file-loader": "^6.0.0",
+    "geckodriver": "^1.19.1",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "http-server": "^0.12.3",
@@ -42,10 +59,8 @@
     "tailwindcss": "^1.4.4",
     "url-loader": "^4.1.0",
     "val-loader": "^2.1.1",
-    "vue-loader": "^15.8.3",
-    "vue-style-loader": "^4.1.2",
+    "vue-cli-plugin-tailwind": "~1.4.1",
     "vue-template-compiler": "^2.6.11",
-    "vue2-ace-editor": "0.0.15",
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.10",
