--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
     "chromedriver": "83",
+    "chromium": "^2.1.2",
     "cssnano": "^4.1.10",
     "dotenv": "^8.2.0",
     "eslint": "^6.7.2",
