--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,9 @@
   command = "./build.sh"
   publish = "dist"
   functions = "lambda/dist"
+[build.environment]
+  # maybe look at https://github.com/puppeteer/puppeteer/releases to find out which release matches with revision
+  CHROMIUM_REVISION = "756035"
 [[headers]]
   for = "/static/fonts/*.*.*"
   [headers.values]
