fixate version of chromium

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
   functions = "lambda/dist"
 [build.environment]
   # maybe look at https://github.com/puppeteer/puppeteer/releases to find out which release matches with revision
-  CHROMIUM_REVISION = "756035"
+  NODE_CHROMIUM_REVISION = "782078"
 [[headers]]
   for = "/static/fonts/*.*.*"
   [headers.values]
