--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@asciidoctor/core": "^2.2.0",
     "asciidoctor-kroki": "^0.10.0",
     "axios": "^0.21.1",
-    "brace": "^0.11.1",
+    "codemirror": "^5.61.1",
+    "codemirror-asciidoc": "^1.0.4",
     "core-js": "^3.6.5",
     "diff": "^4.0.2",
     "font-awesome": "^4.7.0",
@@ -24,8 +25,8 @@
     "three-way-merge": "^0.1.0",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.4",
+    "vue-codemirror": "^4.0.6",
     "vue-router": "^3.2.0",
-    "vue2-ace-editor": "0.0.15",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^3.2.0",
     "xss": "^1.0.9"
@@ -62,7 +63,7 @@
     "val-loader": "^2.1.1",
     "vue-cli-plugin-tailwind": "~1.5.0",
     "vue-template-compiler": "^2.6.11",
-    "webpack": "^5.39.0",
+    "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
