--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
     "vue-router": "^3.2.0",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^3.2.0",
-    "xss": "^1.0.9"
+    "xss": "^1.0.9",
+    "y-codemirror": "^2.1.1",
+    "y-indexeddb": "^9.0.6",
+    "y-webrtc": "^10.2.0",
+    "yjs": "^13.5.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.6",
@@ -42,7 +46,7 @@
     "@vue/eslint-config-airbnb": "^5.0.2",
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
-    "chromedriver": "86.0.0",
+    "chromedriver": "91.0.1",
     "chromium": "^3.0.2",
     "cssnano": "^4.1.11",
     "dotenv": "^8.2.0",
