--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@asciidoctor/core": "^2.2.0",
+    "asciidoctor-highlight.js": "^0.3.0",
     "asciidoctor-kroki": "^0.12.0",
     "axios": "^0.21.1",
     "codemirror": "^5.61.1",
@@ -19,7 +20,6 @@
     "core-js": "^3.6.5",
     "diff": "^5.0.0",
     "font-awesome": "^4.7.0",
-    "highlight.js": "11.0.1",
     "htmldiff-js": "^1.0.5",
     "js-cookie": "^2.2.1",
     "three-way-merge": "^0.1.0",
