--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@asciidoctor/core": "^2.2.5",
-    "asciidoctor-highlight.js": "^0.3.0",
+    "asciidoctor-highlight.js": "https://github.com/ahus1/asciidoctor-highlight.js.git#c1cf0d6f12bae07cbf254a818669cd8d726c1875",
     "asciidoctor-kroki": "^0.14.0",
     "axios": "^0.21.1",
     "codemirror": "^5.61.1",
