--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,9 @@
   functions = "lambda/dist"
 [build.environment]
   # maybe look at https://github.com/puppeteer/puppeteer/releases to find out which release matches with revision
-  NODE_CHROMIUM_REVISION = "901912"
+  NODE_CHROMIUM_REVISION = "938248"
+  # version of chromedriver from https://chromedriver.chromium.org/downloads
+  CHROMEDRIVER_VERSION="97.0.4692.20 npm install chromedriver"
   NODE_VERSION = "v14.17.4"
 [[headers]]
   for = "/static/fonts/*.*.*"
