--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@asciidoctor/core": "^2.2.5",
-    "asciidoctor-highlight.js": "https://github.com/ahus1/asciidoctor-highlight.js.git#c1cf0d6f12bae07cbf254a818669cd8d726c1875",
+    "asciidoctor-highlight.js": "^0.4.0",
     "asciidoctor-kroki": "^0.14.0",
     "axios": "^0.24.0",
     "codemirror-asciidoc": "^1.0.4",
@@ -46,7 +46,7 @@
     "@vue/eslint-config-airbnb": "^5.3.0",
     "@vue/test-utils": "^1.2.2",
     "babel-eslint": "^10.1.0",
-    "chromedriver": "93.0.1",
+    "chromedriver": "96.0.0",
     "chromium": "^3.0.3",
     "cssnano": "^4.1.11",
     "dotenv": "^10.0.0",
