--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
     "asciidoctor-kroki": "^0.15.4",
     "axios": "^0.26.0",
     "codemirror-asciidoc": "^1.0.4",
+    "codemirror-editor-vue3": "^1.0.1",
     "core-js": "^3.21.1",
     "diff": "^5.0.0",
     "font-awesome": "^4.7.0",
     "htmldiff-js": "^1.0.5",
     "js-cookie": "^3.0.0",
     "three-way-merge": "^0.1.0",
-    "vue": "^2.6.14",
+    "vue": "^3.2.31",
     "vue-axios": "^3.4.1",
-    "vue-codemirror": "^4.0.6",
-    "vue-router": "^3.5.3",
-    "vuex": "^3.6.2",
+    "vue-router": "^4.0.12",
+    "vuex": "^4.0.2",
     "vuex-persistedstate": "^4.1.0",
     "xss": "^1.0.10",
     "y-codemirror": "^2.1.1",
@@ -36,15 +36,16 @@
     "yjs": "^13.5.27"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.15",
-    "@vue/cli-plugin-e2e-nightwatch": "~4.5.15",
-    "@vue/cli-plugin-eslint": "~4.5.15",
-    "@vue/cli-plugin-router": "~4.5.15",
-    "@vue/cli-plugin-unit-jest": "~4.5.15",
-    "@vue/cli-plugin-vuex": "~4.5.15",
-    "@vue/cli-service": "~4.5.15",
-    "@vue/eslint-config-airbnb": "^5.3.0",
-    "@vue/test-utils": "^1.2.2",
+    "@vue/cli-plugin-babel": "~5.0.1",
+    "@vue/cli-plugin-e2e-nightwatch": "~5.0.1",
+    "@vue/cli-plugin-eslint": "~5.0.1",
+    "@vue/cli-plugin-router": "~5.0.1",
+    "@vue/cli-plugin-unit-jest": "~5.0.1",
+    "@vue/cli-plugin-vuex": "~5.0.1",
+    "@vue/cli-service": "~5.0.1",
+    "@vue/eslint-config-airbnb": "^6.0.0",
+    "@vue/test-utils": "^2.0.0-rc.17",
+    "@vue/vue3-jest": "^27.0.0-alpha.4",
     "babel-eslint": "^10.1.0",
     "chromedriver": "97.0.4",
     "chromium": "^3.0.3",
@@ -52,6 +53,7 @@
     "dotenv": "^16.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.4.1",
+    "eslint-plugin-vuejs-accessibility": "^1.1.1",
     "file-loader": "^6.0.0",
     "html-loader": "^3.0.1",
     "html-webpack-plugin": "^5.5.0",
@@ -66,7 +68,7 @@
     "val-loader": "^2.1.1",
     "vue-cli-plugin-tailwind": "~1.5.0",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^5.52.0",
+    "webpack": "^5.69.1",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
