--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "@asciidoctor/core": "^2.2.6",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "asciidoctor-highlight.js": "^0.4.0",
-    "asciidoctor-kroki": "^0.15.4",
     "axios": "^0.26.0",
     "codemirror-asciidoc": "^1.0.4",
     "codemirror-editor-vue3": "^1.0.1",
@@ -36,6 +36,7 @@
     "yjs": "^13.5.27"
   },
   "devDependencies": {
+    "asciidoctor-kroki": "^0.15.4",
     "@vue/cli-plugin-babel": "~5.0.1",
     "@vue/cli-plugin-e2e-nightwatch": "~5.0.1",
     "@vue/cli-plugin-eslint": "~5.0.1",
@@ -49,7 +50,6 @@
     "babel-eslint": "^10.1.0",
     "chromedriver": "98.0.1",
     "chromium": "^3.0.3",
-    "cssnano": "^4.1.11",
     "dotenv": "^16.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.4.1",
@@ -63,11 +63,13 @@
     "postcss-loader": "^6.2.1",
     "precss": "^4.0.0",
     "raw-loader": "^4.0.1",
-    "tailwindcss": "^1.4.4",
     "url-loader": "^4.1.0",
     "val-loader": "^2.1.1",
-    "vue-cli-plugin-tailwind": "~1.5.0",
+    "vue-cli-plugin-tailwind": "~2.2.18",
     "vue-template-compiler": "^2.6.14",
+    "autoprefixer": "^9",
+    "postcss": "^7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "webpack": "^5.69.1",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.9.2",
